--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8">
 
-    <h1>ProgWEB ZEBI</h1>
+    <title>Accueil</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 
   </head>
 
   <body>
     <header>
-      <h1>En-tête</h1>
+      <h1>ProgWEB ZEBI</h1>
     </header>
 
     <nav>
       <ul>
-        <li><a href="./travauxHTML.html">HTML</a></li>
+        <li><a href="./travauxhtml.html">HTML</a></li>
         <li><a href="./travauxJS.html">JS</a></li>
         <a href="./travauxPHP.html">PHP</a>
         <li><a href="./index.html">Acccueil</a></li>
