--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="./travauxhtml.html">HTML</a></li>
         <li><a href="./travauxJS.html">JS</a></li>
-        <a href="./travauxPHP.html">PHP</a>
+        <li><a href="./travauxPHP.html">PHP</a></li>
         <li><a href="./index.html">Acccueil</a></li>
       </ul>
 
