--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li><a href="./travauxhtml.html">HTML</a></li>
-        <li><a href="./tp_js_2_exo1.html">JS</a></li>
+        <li><a href="./tp_js_2_carréseultout.html">JS</a></li>
         <li><a href="./travauxPHP.html">PHP</a></li>
         <li><a href="./index.html">Acccueil</a></li>
       </ul>
