--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="./travauxhtml.html">HTML</a></li>
         <li><a href="./travauxJS.html">JS</a></li>
         <li><a href="./travauxPHP.html">PHP</a></li>
-        <li><a href="./index.html">Acccueil</a></li>
+        <li><a href="./index.html">Accueil</a></li>
       </ul>
 
      </nav>
