--- a/travauxHTML.html
+++ b/travauxHTML.html
@@ -15,7 +15,7 @@
 
     <nav>
       <ul>
-        <li><a href="./index.html">Acccueil</a></li>
+        <li><a href="./index.html">Accueil</a></li>
       </ul>
 
      </nav>
