--- a/travauxJS.html
+++ b/travauxJS.html
@@ -15,7 +15,7 @@
 
     <nav>
       <ul>
-        <li><a href="./index.html">Acccueil</a></li>
+        <li><a href="./index.html">Accueil</a></li>
       </ul>
 
      </nav>
@@ -26,12 +26,14 @@
           <p>Regroupe les pages HTML avec js ecrites en TP.</p>
   
           <h3>Où j'en suis dans ma vie ...</h3>
-        </article>
+        
 
         <li><a href="./tp_js_2_carréseultout.html">carré seul</a></li>
         <li><a href="./tp_js_2_carréobj.html">c'est la course (objet)</a></li>
         <li><a href="./tp_js_3_ajax.html">varicelle ajax</a></li>
         <li><a href="./tp_js_3_fetch.html">varicelle fetch</a></li>
+
+    </article>
 
       </main>
 
